[gd_scene load_steps=6 format=3 uid="uid://cbh61d4ro1trx"]

[ext_resource type="Script" path="res://Weapon--Chicken/ChickenScript.gd" id="1_ovddn"]
[ext_resource type="Texture2D" uid="uid://b8vahphy37saq" path="res://GamePlay--Textures/Rubber Chicken.png" id="2_hv3ex"]
[ext_resource type="AudioStream" uid="uid://sthi33sv7nl4" path="res://Weapon--Chicken/RubberChicken.mp3" id="3_abso4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bhrlk"]
radius = 6.0
height = 46.0

[sub_resource type="CanvasTexture" id="CanvasTexture_saugh"]

[node name="Chicken" type="Area2D"]
script = ExtResource("1_ovddn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bhrlk")

[node name="CollisionShapeVisual" type="Sprite2D" parent="CollisionShape2D"]
position = Vector2(-0.44474, 0.0157483)
scale = Vector2(11.9943, 45.7458)
texture = SubResource("CanvasTexture_saugh")

[node name="displayTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="inputBuffer" type="Timer" parent="."]
one_shot = true

[node name="RubberChicken" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_abso4")
bus = &"SFX"

[node name="RightHit" type="Sprite2D" parent="."]
position = Vector2(30, 6)
rotation = 1.5708
scale = Vector2(0.0513607, 0.0747183)
texture = ExtResource("2_hv3ex")

[node name="LeftHit" type="Sprite2D" parent="."]
position = Vector2(-30, 6)
rotation = 4.71239
scale = Vector2(0.0513607, 0.0747183)
texture = ExtResource("2_hv3ex")

[node name="CrouchRight" type="Sprite2D" parent="."]
position = Vector2(50, 40)
rotation = 1.5708
scale = Vector2(0.0513607, 0.0747183)
texture = ExtResource("2_hv3ex")

[node name="CrouchLeft" type="Sprite2D" parent="."]
position = Vector2(-50, 40)
rotation = 4.71239
scale = Vector2(0.0513607, 0.0747183)
texture = ExtResource("2_hv3ex")

[node name="UpLeft" type="Sprite2D" parent="."]
position = Vector2(-20, -20)
rotation = -0.401426
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_hv3ex")

[node name="UpRight" type="Sprite2D" parent="."]
position = Vector2(20, -20)
rotation = 0.401426
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_hv3ex")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="displayTimer" to="." method="_on_display_timer_timeout"]
[connection signal="timeout" from="inputBuffer" to="." method="_on_input_buffer_timeout"]
